beginner/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: base-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "ssl-svc"
    nginx.org/websocket-services: "ws-svc"
    nginx.com/health-checks: "true"
    nginx.org/rewrites: "serviceName=frontend rewrite=/;"
spec:
  tls:
  - hosts:
    - demo-kube.com
    secretName: cert.demo-kube.com
  rules:
  - host: demo-kube.com
    http:
      paths:
      - path: /home
        backend:
          serviceName: frontend
          servicePort: 3000
      - path: /
        backend:
          serviceName: frontend
          servicePort: 3000
      - path: /reader
        backend:
          serviceName: reader
          servicePort: 8080
      - path: /writer
        backend:
          serviceName: writer
          servicePort: 8081
